Fix inventory dialog buttons on small screens

--- a/app/styles.less
+++ b/app/styles.less
@@ -50,7 +50,9 @@ button {
   border-radius: 6px;
   color: @link-color;
   font-size: 16px;
-  padding: 2px 12px;
+
+  @media (min-width: 425px) { padding: 2px 12px; }
+  @media (max-width: 424px) { padding: 2px 6px; }
 
   &:hover {
     background-color: @tab-color-selected;
